# mpv-android-cmake

./: CMakeLists.txt  README.md  cargo_config.in  exec.in  meson_cross.txt.in  toolchain.cmake.in
cmake/: packages_check.cmake
toolchain/: CMakeLists.txt  llvm-compiler.in  llvm-ld.in  llvm-wrapper.cmake
utils/: llvm-pgo-gen.sh  llvm-pgo-use.sh  pgo-use.sh  setup_aarch64.sh
